--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dist"
   ],
   "scripts": {
-    "release": "np --no-publish",
+    "release": "np",
     "build-ts": "tsc --skipLibCheck",
     "watch-ts": "tsc -w --skipLibCheck",
     "build:dev": "maizzle build && yarn watch-ts",
