--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "2fa": false,
     "tests": false,
     "cleanup": false,
-    "yarn": false,
-    "contents": "dist"
+    "yarn": false
   },
   "dependencies": {
     "@maizzle/cli": "^1.5.1",
