--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "@big-whale-labs/sc-email",
-  "version": "0.0.2",
+  "name": "@big-whale-labs/seal-cred-email-template",
+  "version": "0.0.0",
   "license": "MIT",
   "files": [
     "dist"
   ],
   "scripts": {
-    "release": "np",
-    "build-ts": "tsc --skipLibCheck",
-    "watch-ts": "tsc -w --skipLibCheck",
-    "build:dev": "maizzle build && yarn watch-ts",
-    "build": "maizzle build production && yarn build-ts",
-    "start": "concurrently -i -k -p \"[{name}]\" -n \"Node,TypeScript\" -c \"yellow.bold,cyan.bold\" \"maizzle serve\" \"yarn watch-ts\"",
-    "pretty": "prettier --check 'src/**/*.ts'",
-    "update": "yarn build && git add . && git commit -m 'update' && git push",
-    "lint": "yarn pretty && eslint --ext .ts,.tsx,.json --max-warnings 0 src",
-    "prepublishOnly": "yarn build"
+    "build": "tsc --skipLibCheck",
+    "distribute": "node dist/server.js",
+    "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/server.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -40,23 +33,23 @@
     "cleanup": false,
     "yarn": false
   },
-  "dependencies": {
-    "@maizzle/cli": "^1.5.1",
-    "@maizzle/framework": "^4.0.2"
-  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "concurrently": "^7.2.2",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-no-relative-import-paths": "^1.3.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.1.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "np": "^7.6.2",
-    "prettier": "^2.7.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@types/express": "^4.17.13",
+    "@types/mjml-react": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "mjml": "^4.3.1",
+    "mjml-react": "^1.0.45",
+    "nodemon": "^1.18.9",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "tsc-watch": "^5.0.3",
+    "tsx": "^3.6.0",
     "typescript": "^4.7.4"
   },
   "_moduleAliases": {
