--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "scripts": {
     "build": "tsc --skipLibCheck",
     "distribute": "node dist/server.js",
-    "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/server.js'"
+    "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/server.js'",
+    "lint": "prettier --check src && eslint --max-warnings 0 --ext ts scripts && yarn eth-lint",
+    "prettify": "prettier --write src",
+    "release": "np",
+    "prepublishOnly": "yarn build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,13 +43,15 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@types/express": "^4.17.13",
-    "@types/mjml-react": "^2.0.4"
+    "@types/mjml-react": "^2.0.4",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
     "express": "^4.16.4",
     "mjml": "^4.3.1",
     "mjml-react": "^1.0.45",
     "nodemon": "^1.18.9",
+    "np": "^7.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "tsc-watch": "^5.0.3",
