--- a/package.json
+++ b/package.json
@@ -44,19 +44,18 @@
     "@babel/preset-react": "^7.0.0",
     "@types/express": "^4.17.13",
     "@types/mjml-react": "^2.0.4",
-    "prettier": "^2.7.1"
-  },
-  "dependencies": {
+    "prettier": "^2.7.1",
     "express": "^4.16.4",
-    "mjml": "^4.3.1",
-    "mjml-react": "^1.0.45",
     "nodemon": "^1.18.9",
     "np": "^7.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
     "tsc-watch": "^5.0.3",
-    "tsx": "^3.6.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "mjml": "^4.3.1",
+    "mjml-react": "^1.0.45",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "_moduleAliases": {
     "@": "dist"
