--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@types/mjml-react": "^2.0.6",
     "eslint": "^8.34.0",
     "express": "^4.18.2",
+    "module-alias": "^2.2.2",
     "nodemon": "^2.0.20",
     "np": "^7.6.2",
     "prettier": "^2.8.0",
+    "source-map-support": "^0.5.21",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.9.3"
   },
