--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "envalid": "^7.3.1",
     "mjml": "^4.13.0",
     "mjml-react": "^2.0.8",
+    "module-alias": "^2.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "source-map-support": "^0.5.21"
   },
   "_moduleAliases": {
     "@": "dist"
