Add waitlist email, refactor everything

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 KETL_ADDRESS=https://ketl.xyz/#
 ASSETS_ADDRESS=https://ketl.xyz
+MAILGUN_API_KEY=000000000000000000000000000000-000000000-000000000
+MAILGUN_DOMAIN=mail.something.name
+TEST_EMAIL=test@email.com
