--- a/package.json
+++ b/package.json
@@ -49,15 +49,22 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/express": "^4.17.14",
     "@types/mjml-react": "^2.0.6",
+    "@types/nodemailer": "^6.4.13",
+    "@types/nodemailer-mailgun-transport": "^1.4.5",
+    "@types/sendmail": "^1.4.6",
     "eslint": "^8.34.0",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.7",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "nodemon": "^2.0.20",
     "np": "^7.7.0",
     "prettier": "^2.8.0",
+    "sendmail": "^1.6.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "mjml": "^4.13.0",
     "mjml-react": "^2.0.8",
