--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ ASSETS_ADDRESS=https://ketl.xyz
 MAILGUN_API_KEY=000000000000000000000000000000-000000000-000000000
 MAILGUN_DOMAIN=mail.something.name
 TEST_EMAIL=test@email.com
+TEST_TWITTER_HANDLE=ketlxyz
